updates to css & added favicon etc

--- a/Desktop/SDEV305/portfolio/index.html
+++ b/Desktop/SDEV305/portfolio/index.html
@@ -5,20 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstName LastName - Resume</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/png" href="images/android-chrome-512x512.png">
 </head>
 <body>
     <div class="container">
         <!-- HEADER -->
         <div class="header">
+            <img src="images/Photo_of_me.jpg" alt="Paris Allkurti" class="profile-photo">
             <h1 class="name">Paris Allkurti</h1>
             <table class="contact-table">
                 <tr>
-                    <td class="contact-left">parisdunmire19@gmail.com</td>
-                    <td class="contact-right">www.https://www.linkedin.com/in/paris-allkurti-591550252/</td>
+                    <td class="contact-left">
+                        <a href="mailto:parisdunmire19@gmail.com">parisdunmire19@gmail.com</a>
+                    <td class="contact-right">
+                        <a href="https://www.linkedin.com/in/paris-allkurti-591550252/" target="_blank">LinkedIn</a>
+                    </td>
                 </tr>
                 <tr>
                     <td class="contact-left">(253) 325-4977</td>
-                    <td class="contact-right">github.com/pdunmire-pcd</td>
+                    <td class="contact-right"><a href="https://github.com/pdunmire-pcd" target="_blank">GitHub</a></td>
                 </tr>
             </table>
         </div>
