experimented with styling

--- a/index.html
+++ b/index.html
@@ -28,127 +28,78 @@
             </table>
         </div>
 
-        <!-- SUMMARY -->
-        <div class="section">
-            <h2 class="section-title">Summary</h2>
-            <p class="body-text">Passionate and detail-oriented Computer Science student pursuing a career in software development with a strong foundation in programming, data structures, and web technologies.</p>
-        </div>
+        <!-- TWO COLUMN LAYOUT -->
+        <div class="resume-columns">
+            <!-- LEFT SIDEBAR -->
+            <aside class="sidebar">
+                <!-- SKILLS AND CERTIFICATIONS -->
+                <div class="section">
+                    <h2 class="section-title">Skills</h2>
+                    <ul class="single-column-list">
+                        <li>Java, SQL, JavaScript, Python</li>
+                        <li>HTML5/CSS3, Bootstrap, JSON</li>
+                        <li>React/Next.js</li>
+                        <li>Git & GitHub, VS Code</li>
+                        <li>Node.js & npm</li>
+                        <li>Netlify, Vercel</li>
+                        <li>Figma & Canva</li>
+                    </ul>
+                </div>
 
-        <!-- EDUCATION -->
-        <div class="section">
-            <h2 class="section-title">Education</h2>
-            <table class="item-table">
-                <tr>
-                    <td class="item-left"><strong>Green River College</strong> – Auburn, WA</td>
-                    <td class="item-right">Present</td>
-                </tr>
-            </table>
-            <p class="body-text">Bachelor of Applied Science, expected June 2026</p>
-            <p class="body-text">Major: Software Development (Applied Computer Science)</p>
-            <p class="body-text">Relevant Coursework:</p>
-            <table class="two-column-list">
-                <tr>
-                    <td>
-                        <ul>
-                            <li>Data-driven Web Applications</li>
-                            <li>Node - Server Side Scripting</li>
-                            <li>Full Stack Web Development</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>Systems Programming (bitwise operations, exceptions, networking)</li>
-                            <li>Introduction to Computer Systems (programming side)</li>
-                            <li>Memory Hierarchy/Processes & Threads/Run Time Analysis</li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </div>
+                <div class="section">
+                    <h2 class="section-title">Certifications</h2>
+                    <ul class="single-column-list">
+                        <li>ASU Global Career Accelerator: JavaScript Specialist</li>
+                        <li>Publicis Sapient Web Development Project</li>
+                        <li>Intercultural Skills Certificate</li>
+                    </ul>
+                </div>
 
-        <div class="section">
-            <table class="item-table">
-                <tr>
-                    <td class="item-left"><strong>Arizona State University</strong> – Phoenix, AZ</td>
-                    <td class="item-right">January 2024 - June 2025</td>
-                </tr>
-                </table>
+                <!-- EDUCATION - GREEN RIVER COLLEGE -->
+                <div class="section">
+                    <h2 class="section-title">Education</h2>
+                    <table class="item-table">
+                        <tr>
+                            <td class="item-left"><strong>Green River College</strong></td>
+                            <td class="item-right">Present</td>
+                        </tr>
+                    </table>
+                    <p class="body-text">Bachelor of Applied Science, expected June 2026</p>
+                    <p class="body-text"><strong>Major:</strong> Software Development</p>
+                </div>
+
+                <!-- EDUCATION - ASU -->
+                <div class="section">
+                    <table class="item-table">
+                        <tr>
+                            <td class="item-left"><strong>Arizona State University</strong></td>
+                            <td class="item-right">2024-2025</td>
+                        </tr>
+                    </table>
                     <p class="body-text">Associate of Applied Science</p>
-                    <p class="body-text">Major: Full Stack Web Development</p>
-                    <p class="body-text">Relevant Coursework:</p>
-                <table class="two-column-list">
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>Object Oriented Programming + Data</li>
-                                <li>Introduction to Web Design</li>
-                            </ul>
-                        </td>
-                        <td>
-                        <ul>
-                            <li>Full Stack Web Development</li>
-                            <li>Communication Business & Professionals</li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    <p class="body-text"><strong>Major:</strong> Full Stack Web Dev</p>
+                </div>
 
-        <div class="section">
-            <table class="item-table">
-                <tr>
-                        <td class="item-left"><strong>Bates Technical HighSchool</strong> – Tacoma, WA</td>
-                    <td class="item-right">January 2021 - June 2023</td>
-                </tr>
-                </table>
+                <!-- EDUCATION - BATES -->
+                <div class="section">
+                    <table class="item-table">
+                        <tr>
+                            <td class="item-left"><strong>Bates Technical HS</strong></td>
+                            <td class="item-right">2021-2023</td>
+                        </tr>
+                    </table>
                     <p class="body-text">Associate of Applied Science</p>
-                    <p class="body-text">Major: Software Development</p>
-                    <p class="body-text">Relevant Coursework:</p>
-                <table class="two-column-list">
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>Object Oriented Programming + Data</li>
-                                <li>Introduction to Web Design</li>
-                                <li>Dynamic Web Applications</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Open Sourcing Programming</li>
-                                <li>Mobile Application Development</li>
-                                <li>Web Programming W/Java</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-        </div>
+                    <p class="body-text"><strong>Major:</strong> Software Development</p>
+                </div>
+            </aside>
 
-        <!-- SKILLS AND CERTIFICATIONS -->
-        <div class="section">
-            <h2 class="section-title">Skills and Certifications</h2>
-            <table class="two-column-list">
-                <tr>
-                    <td>
-                        <ul>
-                            <li>Languages: Java, SQL, JavaScript, Python</li>
-                            <li>Web: HTML5/CSS3, Bootstrap, JSON, React/Next.js</li>
-                            <li>Tools: Git & GitHub, Visual Studio Code, Node.js & npm</li>
-                            <li>Frameworks & Libraries : React, Next.js</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>Development: netlify, Vercel</li>
-                            <li>Design & Productivity: Figma & Canva</li>
-                            <li>Certification: ASU Global Career Accelorator: JavaScript Specialist</li>
-                            <li>Certification: Publicis Sapient Web Development Project Certificate</li>
-                            <li>Intercultural Skills Certificate</li>
-                        </ul>
-                    </td>
-                </tr>
-            </table>
-        </div>
+            <!-- MAIN CONTENT -->
+            <main class="main-content">
+                <!-- SUMMARY -->
+                <div class="section">
+                    <h2 class="section-title">Summary</h2>
+                    <p class="body-text">Passionate and detail-oriented Computer Science student pursuing a career in software development with a strong foundation in programming, data structures, and web technologies.</p>
+                </div>
 
         <!-- EXPERIENCE -->
         <div class="section">
@@ -157,7 +108,7 @@
             <table class="item-table">
                 <tr>
                     <td class="item-left"><strong>Nordstrom</strong> – Tacoma, WA</td>
-                    <td class="item-right">2025</td>
+                    <td class="item-right">Present</td>
                 </tr>
             </table>
             <p class="body-text">Sales Person Stylist</p>
@@ -206,6 +157,8 @@ Completed alongside high school through a technical program; foundation in Java,
 Combined software development, UX thinking, and visual design to create user-centered digital experiences for real-world clients</li>
             </ul>
         </div>
+            </main>
+        </div> <!-- end resume-columns -->
     </div>
 </body>
 </html>
